Fix grid alignment on team page

--- a/css/main.scss
+++ b/css/main.scss
@@ -29,7 +29,6 @@ h1, h2, h3 {
 
 .gridder-list {
     padding: 36px;
-    display: inline-block;
     vertical-align: top
 }
 
@@ -274,8 +273,6 @@ a.white {
 .person-description > a > i {
     font-size: 1.8em;
     padding-top: 6px;
-    padding-left: 12px;
-    padding-right: 12px;
     color: #545454;
 }
 
